@@ -12,36 +12,36 @@
 		'@srcdir@/core/exmpp_jlib',
 		'@srcdir@/core/exmpp_stream',
 		'@srcdir@/core/exmpp_error',
-	        '@srcdir@/network/exmpp_callbacks',
-	        '@srcdir@/network/exmpp_session',
-	        '@srcdir@/network/exmpp_ssl',
-	        '@srcdir@/network/exmpp_tcp',
-	        '@srcdir@/examples/echo_client',
-	        '@srcdir@/client/exmpp_client_stream',
-		'@srcdir@/client/exmpp_client_tls',
-		'@srcdir@/client/exmpp_client_compression',
-		'@srcdir@/client/exmpp_client_sasl',
+		'@srcdir@/network/exmpp_callbacks',
+		'@srcdir@/network/exmpp_session',
+		'@srcdir@/network/exmpp_ssl',
+		'@srcdir@/network/exmpp_tcp',
 		'@srcdir@/client/exmpp_client_binding',
-		'@srcdir@/client/exmpp_client_session',
+		'@srcdir@/client/exmpp_client_compression',
 		'@srcdir@/client/exmpp_client_legacy_auth',
+		'@srcdir@/client/exmpp_client_presence',
 		'@srcdir@/client/exmpp_client_pubsub',
 		'@srcdir@/client/exmpp_client_register',
-                '@srcdir@/client/exmpp_client_roster',
-		'@srcdir@/client/exmpp_client_presence',
+		'@srcdir@/client/exmpp_client_roster',
+		'@srcdir@/client/exmpp_client_sasl',
+		'@srcdir@/client/exmpp_client_session',
+		'@srcdir@/client/exmpp_client_stream',
+		'@srcdir@/client/exmpp_client_tls',
+		'@srcdir@/server/exmpp_server_binding',
+		'@srcdir@/server/exmpp_server_compression',
+		'@srcdir@/server/exmpp_server_legacy_auth',
+		'@srcdir@/server/exmpp_server_sasl',
+		'@srcdir@/server/exmpp_server_session',
 		'@srcdir@/server/exmpp_server_stream',
 		'@srcdir@/server/exmpp_server_tls',
-		'@srcdir@/server/exmpp_server_compression',
-		'@srcdir@/server/exmpp_server_sasl',
-		'@srcdir@/server/exmpp_server_binding',
-		'@srcdir@/server/exmpp_server_session',
-		'@srcdir@/server/exmpp_server_legacy_auth'@COMPAT_MODULES_START@
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_zlib',
 		@COMPAT_MODULES@'@srcdir@/compat/iconv',
 		@COMPAT_MODULES@'@srcdir@/compat/jlib',
 		@COMPAT_MODULES@'@srcdir@/compat/sha',
 		@COMPAT_MODULES@'@srcdir@/compat/stringprep',
 		@COMPAT_MODULES@'@srcdir@/compat/tls',
-		@COMPAT_MODULES@'@srcdir@/compat/xml'
+		@COMPAT_MODULES@'@srcdir@/compat/xml',
+                '@srcdir@/examples/echo_client'
 	],
 	[
 		@EMKOPTS@,
